--- a/css/board.css
+++ b/css/board.css
@@ -1,8 +1,9 @@
 .board{
-    width: 80%;
-    height: 500px;
-    border: 1px solid gray;
+    width: 100%;
+    height: 100vh;
     margin: 0 auto;
     position: relative;
     overflow: hidden;
+    background: linear-gradient(#87ceeb,#e0f6ff);
+    border-bottom: 10vh solid darkgreen;
 }
